// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Disabled Chip 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 50,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 20,
          "elevation": 10,
          "flex": 1,
          "flexDirection": "row",
          "margin": 5,
          "padding": 8,
          "paddingRight": 15,
        },
        Object {
          "backgroundColor": "#FFF",
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 24,
          "marginLeft": 5,
          "width": 24,
        }
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "marginTop": 2,
            "paddingLeft": 5,
          },
          Object {
            "color": "#707070",
          },
        ]
      }
    >
      Chip
    </Text>
  </View>
</View>
`;

exports[`Renders Enabled Chip 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 50,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 20,
          "elevation": 10,
          "flex": 1,
          "flexDirection": "row",
          "margin": 5,
          "padding": 8,
          "paddingRight": 15,
        },
        Object {
          "backgroundColor": "#FD4040",
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 24,
          "marginLeft": 5,
          "width": 24,
        }
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "marginTop": 2,
            "paddingLeft": 5,
          },
          Object {
            "color": "#FFF",
          },
        ]
      }
    >
      Chip
    </Text>
  </View>
</View>
`;
